# Re-Search

./: .env  Cargo.toml  page.json  site-index.yaml
instructions/: docker_files.txt
src/: common.rs  crawler.rs  db.rs  main.rs
src/api/: health.rs  search.rs
src/common/: config.rs  utils.rs
src/crawler/: core.rs  crawl.rs  documents.rs  utils.rs
src/db/: init_db.rs  kv.rs  paths.rs
