[package]
name = "re-search-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
scraper = "0.19"
url = "2.5"
chrono = "0.4"
rand = "0.8"
curl = "0.4.44"
dotenvy = "0.15.7"
r2d2 = "0.8"
sha1 = "0.10"
once_cell = "1.21.3"
phf = { version = "0.11", features = ["macros"] }
r2d2_redis = { version = "0.14" }
